--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,11 @@
 --bordercl:rebeccapurple;
 --callouctcolor:dodgerblue;
 --hovercolor:navy;
---darkMaincolor: #50fa7b;
+--darkMaincolor: #c6a0f6;
 }
 html {
   color: #232333;
-  font-family: 'Noto Serif SC', serif;
+  font-family: 'GlowSansSC';
   font-size: 15px;
   line-height: 1.6em;
 }
@@ -26,7 +26,7 @@ body{
 }
 
 p {
-  font-family: 'Noto Serif SC', serif;
+  font-family: 'GlowSansSC';
   line-height: 1.5;
 }
 
@@ -43,8 +43,12 @@ blockquote {
   padding-left: 1em;
 }
 
+blockquote * {
+  font-family: 'Besley*';
+}
+
 a {
-  border-bottom: 3px solid var(--maincolor);
+  border-bottom: 2px solid var(--maincolor);
   color: inherit;
   text-decoration: none;
 }
@@ -99,7 +103,8 @@ figure h4::before {
 
 /* Code blocks */
 code {
-  background-color: #f1f1f1;
+  font-family: 'Drafting* Mono', monospace;
+  background-color: #494d64;
   padding: .1em .2em;
 }
 
@@ -166,6 +171,7 @@ footer {
 }
 
 time {
+  font-family: 'Besley*';
   color: grey;
 }
 
@@ -183,12 +189,12 @@ article .title {
 }
 
 .callout p {
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: 'Drafting* Mono', monospace;
   margin: 0;
 }
 
 .callout a {
-  border-bottom: 3px solid #fff;
+  border-bottom: 2px solid #fff;
 }
 
 .callout a:hover {
@@ -204,11 +210,11 @@ justify-content: space-between;
   content: "🏷️ ";
 }
 .tags a{
-  border-bottom: 3px solid var(--maincolor); 
+  border-bottom: 3px solid var(--maincolor);
 }
 .tags a:hover{
   color:white;
-  background-color: var(--hovercolor); 
+  background-color: var(--hovercolor);
 }
 svg{
   max-height: 15px;
@@ -216,7 +222,7 @@ svg{
 .soc:hover{
   color: white;
 }
-.draft-label{ 
+.draft-label{
     color: var(--bordercl);
     text-decoration: none;
     padding: 2px 4px;
@@ -267,7 +273,7 @@ color:white
 .highlight pre code[class*='language-json']::before{
 content: 'json';
 background: dodgerblue;
- color: #000000 
+ color: #000000
 }
 .highlight pre code[class*='language-python']::before,
 .highlight pre code[class*='language-py']::before {
