deploy: tomial/BlogSource@d014872802e5971fbb8e9e9a7dbc9e6717340f12

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 /* Markdown */
 :root{
---maincolor: red;
+--maincolor: #eff1f5;
 --bordercl:rebeccapurple;
---callouctcolor:dodgerblue;
---hovercolor:navy;
+--callouctcolor:#8caaee;
+--hovercolor:#ca9ee6;
 --darkMaincolor: #c6a0f6;
 }
 html {
