--- a/css/dark.css
+++ b/css/dark.css
@@ -16,7 +16,7 @@ body {
 }
 
 hr {
-  border-top: 3px dotted blue;
+  border-top: 3px dotted var(--callouctcolor);
 }
 code {
   background-color: #6e738d;
