--- a/css/dark.css
+++ b/css/dark.css
@@ -102,7 +102,8 @@ a:hover {
 }
 
 .highlight {
-  background-color: #333;
+  display: flex;
+  background-color: var(--darkCodeColor);
 }
 .soc:hover {
   color: black;
