--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 --callouctcolor:#8caaee;
 --hovercolor:#ca9ee6;
 --darkMaincolor: #c6a0f6;
+--darkCodeColor: #1e1e2e;
 }
 html {
   color: #232333;
@@ -103,8 +104,8 @@ figure h4::before {
 
 /* Code blocks */
 code {
-  font-family: 'Drafting* Mono', monospace;
-  background-color: #494d64;
+  font-family: 'Drafting* Mono', 'Drafting* Mono Italic', 'GlowSansSC', monospace;
+  background-color: var(--darkCodeColor);
   padding: .1em .2em;
 }
 
@@ -231,24 +232,31 @@ svg{
     background-color: #f9f2f4;
 }
 .highlight {
+  display: flex;
   position: relative;
+  border-radius: 10px;
   -webkit-overflow-scrolling: touch;
+}
+div.highlight div {
+  border-radius: 10px;
 }
 .highlight pre code[class*="language-"] {
   -webkit-overflow-scrolling: touch;
 }
 .highlight pre code[class*="language-"]::before {
+  font-family: 'Drafting* Mono';
+  content: attr(data-lang);
   background: black;
-  border-radius: 0 0 0.25rem 0.25rem;
-  color: white;
-  font-size: 12px;
+  border-radius: 0.25rem 0.25rem 0.25rem 0.25rem;
+  color: var(--darkMainColor);
+  font-size: 14px;
   letter-spacing: 0.025rem;
   padding: 0.1rem 0.5rem;
   position: absolute;
   right: 1rem;
   text-align: right;
   text-transform: uppercase;
-  top: 0;
+  top: 5px;
 }
 
 .highlight pre code[class=language-javaScript]::before,
