deploy: tomial/BlogSource@f1a35d35ec28aad90f3b9f03f545d288ece772c2

--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,7 @@ svg{
   display: flex;
   position: relative;
   border-radius: 10px;
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
 div.highlight div {
