deploy: tomial/BlogSource@6b4aaac32f11943175e7866a5694b966ee5bc28d

--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,7 @@ svg{
   display: flex;
   position: relative;
   border-radius: 10px;
-  overflow: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 div.highlight div {
